OV-412: * fix scrollbar styles

--- a/frontend/src/bundles/studio/pages/styles.module.css
+++ b/frontend/src/bundles/studio/pages/styles.module.css
@@ -1,14 +1,22 @@
 .scrollableContainer {
+    /* WebKit Browsers */
     ::-webkit-scrollbar {
         width: 12px;
+        background-color: #F5F5F5; /* Added background color */
     }
 
     ::-webkit-scrollbar-track {
         background: #f1f1f1;
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); /* Added box shadow */
+        border-radius: 10px; /* Added border radius */
+        background-color: #F5F5F5; /* Added background color */
     }
 
     ::-webkit-scrollbar-thumb {
         background: #888;
+        border-radius: 10px; /* Added border radius */
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); /* Added box shadow */
+        background-color: #F5F5F5; /* Added background color */
     }
 
     ::-webkit-scrollbar-thumb:hover {
@@ -16,6 +24,6 @@
     }
 
     /* Firefox */
-    scrollbar-width: 15px;
+    scrollbar-width: thin;
     scrollbar-color: #888 #f1f1f1;
 }
